Fixed various vulnerability issues reported by the reviewers (#23)

--- a/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-redpenPlugin.html
+++ b/src/main/resources/org/jenkinsci/plugins/redpen/RedpenJobProperty/help-redpenPlugin.html
@@ -15,7 +15,8 @@
     <p>
         The plugin in powered by <a
             href="https://www.redpen.ai/?utm_source=jenkins_plugin&utm_medium=application&utm_campaign=integration"
-            target="_blank">Redpen</a>.
+            target="_blank"
+            rel="noopener noreferrer">Redpen</a>.
     </p>
 
 </div>
